@@ -5,11 +5,11 @@
 Light-emitting helmets.
 
 Supports helmets from the following mods:
-- 3d_armor
-- technic_armor
-- xtraarmor
-- amber
-- rainbow_ore
+- [3d_armor](https://content.minetest.net/packages/stu/3d_armor/)
+- [technic_armor](https://github.com/stujones11/technic_armor)
+- [xtraarmor](https://forum.minetest.net/viewtopic.php?t=16645)
+- [amber](https://forum.minetest.net/viewtopic.php?t=18186)
+- [rainbow_ore](https://forum.minetest.net/viewtopic.php?id=13519)
 
 ### Licensing:
 
@@ -36,18 +36,25 @@ Supports helmets from the following mods:
 
 ### Requirements:
 
+```
 Minimum Minetest verserion: 0.4
 
 Depends:
-- [3d_armor][]
-- [3d_armor_light](https://content.minetest.net/packages/AntumDeluge/3d_armor_light/)
+- 3d_armor
+- 3d_armor_light
 
 Optional depends:
-- [default](https://github.com/minetest/minetest_game/blob/master/mods/default)
-- [technic_armor](https://github.com/stujones11/technic_armor)
-- [xtraarmor](https://forum.minetest.net/viewtopic.php?t=16645)
-- [amber](https://forum.minetest.net/viewtopic.php?t=18186)
-- [rainbow_ore](https://forum.minetest.net/viewtopic.php?id=13519)
+- default
+- technic_armor
+- xtraarmor
+- amber
+- rainbow_ore
+
+Settings:
+- lighted_helmets.exclude
+  - List of mods or helmets to exclude.
+	- Example: lighted_helmets.exclude = xtraarmor,amber:helmet
+```
 
 ### Links:
 
@@ -55,6 +62,3 @@ Optional depends:
 - [Git repo](https://github.com/AntumMT/mod-lighted_helmets)
 - [Changelog](changelog.txt)
 - [TODO](TODO.txt)
-
-
-[3d_armor]: https://content.minetest.net/packages/stu/3d_armor/
