@@ -1,3 +1,2 @@
 
 TODO:
-- add setting to manually disable helmets
