@@ -8,3 +8,4 @@ v1.0
 - added light to helmets crafted from xtraarmor helmets
 - added light to helmets crafted from amber helmets
 - added light to helmets crafted from rainbow_ore helmets
+- added setting to exclude helmets
